# TextAnalyser

./: 1.txt  CMakeLists.txt  Makefile  analyzer.cpp  analyzer.h  dirAnalyzer.cpp  dirAnalyzer.h  lineParserChar.cpp  lineParserChar.h  lineParserStringStream.cpp  lineParserStringStream.h  logger.cpp  logger.h  main.cpp  mainStructure.h  mandelbrotWriter.cpp  mandelbrotWriter.h  myStrings.cpp  myStrings.h  pngWriter.cpp  pngWriter.h  stringLogger.cpp  stringLogger.h  window.cpp  window.h
archive/: lineParserStringStream.h
